# Software_Design_For_UAV_Applications_in_GNSS-DENIED_Environments

./: Commands.md  Error_handling.md  Firmware_setup.md  README.md
ground_station/: README.md  bag_reader.py  coord_to_ang.py
ground_station/src/control_nodes/: CMakeLists.txt  package.xml
ground_station/src/control_nodes/include/control_nodes/: command_publisher.hpp  coordinate_publisher.hpp  coordinates_comparator.hpp  recorder.hpp
ground_station/src/control_nodes/src/: command_publisher.cpp  coordinate_publisher.cpp  coordinates_comparator.cpp  recorder.cpp
ground_station/src/drone_msgs/: CMakeLists.txt  package.xml
ground_station/src/drone_msgs/msg/: DroneCommand.msg
ground_station/src/mocap4r2_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  mocap4r2_bridge_mapping_rule.yaml  package.xml
ground_station/src/mocap4r2_msgs/msg/: ImusInfo.msg  Marker.msg  Markers.msg  RigidBodies.msg  RigidBody.msg
libapq8086-io/: CHANGELOG  LICENSE  README.md  build.sh  clean.sh  deploy_to_voxl.sh  install_build_deps.sh  libapq8096-io_0.6.1.ipk  make_package.sh
libapq8086-io/build_apps/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  io_rpc_skel.c  voxl-client-try  voxl-close-uart  voxl-gpio  voxl-gpio-loopback  voxl-i2c  voxl-open-uart  voxl-parser  voxl-read-uart  voxl-server  voxl-spi  voxl-test-mavparser  voxl-test-time  voxl-uart-loopback  voxl-write-uart
libapq8086-io/build_sdsp/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  io_rpc.h  io_rpc_stub.c
libapq8086-io/lib/: .gitignore
libapq8086-io/lib/apps/: CMakeLists.txt  close-uart.c  open-uart.c  parser.c  read-uart.c  voxl-gpio-loopback.c  voxl-gpio.c  voxl-i2c-mpu6050-tester.c  voxl-i2c.c  voxl-spi.c  voxl-test-mavparser.c  voxl-test-time.c  voxl-uart-loopback.c  voxl_io_gpio.c  voxl_io_i2c.c  voxl_io_mavparser.c  voxl_io_misc.c  voxl_io_spi.c  voxl_io_uart.c  write-uart.c
libapq8086-io/lib/idl/: io_rpc.idl
libapq8086-io/lib/include/: voxl_io.h
libapq8086-io/lib/python/: voxl_i2c.py  voxl_i2c_apm_v1.py  voxl_i2c_apm_v2.py  voxl_i2c_scan.py
libapq8086-io/lib/sdsp/: CMakeLists.txt  io_rpc_gpio.c  io_rpc_i2c.c  io_rpc_mavparser.c  io_rpc_misc.c  io_rpc_spi.c  io_rpc_uart.c
libapq8086-io/pkg/: .gitignore
libapq8086-io/pkg/control/: control
voxl_container/: README.md
voxl_container/voxl_container_arm_uwb/: Dockerfile  README.md  entrypoint.sh
voxl_container/voxl_container_arm_uwb/src/director/: CMakeLists.txt
voxl_container/voxl_container_arm_uwb/src/director/include/director/: director_node.hpp  uwb_coordinate_publisher.hpp
voxl_container/voxl_container_arm_uwb/src/director/src/: director_node.cpp  uwb_coordinate_publisher.cpp
voxl_container/voxl_container_arm_uwb/src/drone_msgs/: CMakeLists.txt  package.xml
voxl_container/voxl_container_arm_uwb/src/drone_msgs/msg/: DroneCommand.msg
voxl_container/voxl_container_arm_uwb/tools/ros_build_materials/install/director/lib/director/: coordinate_publisher
voxl_container/voxl_container_arm_uwb/tools/ros_build_materials/install/director/share/ament_index/resource_index/package_run_dependencies/: director
voxl_container/voxl_container_arm_uwb/tools/ros_build_materials/install/director/share/ament_index/resource_index/parent_prefix_path/: director
voxl_container/voxl_container_arm_uwb/tools/ros_build_materials/install/director/share/director/: package.sh  package.zsh
voxl_container/voxl_container_arm_uwb/tools/ros_build_materials/install/drone_msgs/share/drone_msgs/: package.sh
voxl_container/voxl_container_arm_uwb/tools/ros_build_materials/install/drone_msgs/share/drone_msgs/cmake/: export_drone_msgs__rosidl_generator_pyExport.cmake
voxl_container/voxl_container_arm_uwb/tools/ros_build_materials/install/px4_msgs/share/px4_msgs/: local_setup.sh  package.sh
voxl_container/voxl_container_arm_vicon/: Dockerfile  entrypoint.sh
voxl_container/voxl_container_arm_vicon/src/director/: CMakeLists.txt  package.xml
voxl_container/voxl_container_arm_vicon/src/director/include/director/: director_node.hpp
voxl_container/voxl_container_arm_vicon/src/director/src/: director_node.cpp
voxl_container/voxl_container_arm_vicon/src/mocap4ros2_vicon/mocap4r2_vicon_driver/: CMakeLists.txt  package.xml
voxl_container/voxl_container_arm_vicon/src/mocap4ros2_vicon/mocap4r2_vicon_driver/config/: mocap4r2_vicon_driver_params.yaml
voxl_container/voxl_container_arm_vicon/src/mocap4ros2_vicon/mocap4r2_vicon_driver/include/mocap4r2_vicon_driver/: mocap4r2_vicon_driver.hpp
voxl_container/voxl_container_arm_vicon/src/mocap4ros2_vicon/mocap4r2_vicon_driver/src/mocap4r2_vicon_driver/: mocap4r2_vicon_driver.cpp
voxl_container/voxl_container_arm_vicon/tools/ros_build_materials/install/director/share/director/: package.bash  package.dsv  package.ps1
voxl_container/voxl_container_arm_vicon/tools/ros_build_materials/install/drone_msgs/share/drone_msgs/cmake/: rosidl_cmake-extras.cmake
voxl_container/voxl_container_arm_vicon/tools/ros_build_materials/install/drone_msgs/share/drone_msgs/msg/: DroneCommand.idl
voxl_container/voxl_container_arm_vicon/tools/ros_build_materials/install/mocap4r2_control/lib/mocap4r2_control/: auxiliar_main
voxl_container/voxl_container_arm_vicon/tools/ros_build_materials/install/mocap4r2_control/share/mocap4r2_control/: package.sh
voxl_container/voxl_container_arm_vicon/tools/ros_build_materials/install/mocap4r2_control_msgs/share/mocap4r2_control_msgs/: package.sh
voxl_container/voxl_container_arm_vicon/tools/ros_build_materials/install/mocap4r2_msgs/share/mocap4r2_msgs/: package.sh
voxl_container/voxl_container_arm_vicon/tools/ros_build_materials/install/mocap4r2_vicon_driver/lib/mocap4r2_vicon_driver/: mocap4r2_vicon_driver_main
voxl_container/voxl_container_arm_vicon/tools/ros_build_materials/install/mocap4r2_vicon_driver/share/mocap4r2_vicon_driver/: package.sh
voxl_container/voxl_container_arm_vicon/tools/ros_build_materials/install/mocap4r2_vicon_driver/share/mocap4r2_vicon_driver/cmake/: ament_cmake_export_dependencies-extras.cmake
(+13 files in other folders)
